# workflow-assistant

./: .gitignore  LICENSE  README.md  app.py  cert-letsencrypt.sh  cert-selfsigned.sh  docker-compose.prod.yml  docker-compose.yml  env.example  nginx.conf  nginx.prod.conf
.github/workflows/: ci-cd.yml
agents/: qa_agent.py
api/: qa_router.py
backend/: .dockerignore  .env.example  Dockerfile  app.py  env.example  pyproject.toml
backend/agents/: expert_agent.py  qa_agent.py
backend/api/: auth_router.py  chat_router.py  chatbot_router.py  qa_router.py
backend/auth/: auth.py
backend/chroma_db/: chroma.sqlite3
backend/config/: settings.py
backend/db/: crud.py  db_auth.py  models.py
backend/expert_finder/: skill_extractor.py  skill_lookup.py
backend/rag/: chunker.py  embedder.py  llm_client.py  retriever.py  vector_db_builder.py
backend/rag_qa/: chunker.py  confluence_client.py  llm_client.py  retriever.py  vector_db_builder.py
backend/tests/: test_basic.py
chroma_db/: chroma.sqlite3
config/: settings.py
data/: confluence_loader.py
db/: crud.py  db_auth.py  models.py
deploy/: cert-letsencrypt.sh  docker-compose.prod.yml  nginx.prod.conf  vm-setup.sh
frontend/: .dockerignore  Dockerfile  gradio_app.py  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: account-panel.tsx  auth-provider.tsx  chat-container.tsx  chat-header.tsx  chat-input.tsx  chat-messages.tsx  (+3 more)
rag/: confluence_client.py  confluence_loader.py  embedder.py  llm_client.py  retriever.py  vector_db_builder.py
(+8 files in other folders)
